# topcat

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  package.nix  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/assets/: g.dot
python/topcat/: __main__.py
src/: config.rs  exceptions.rs  file_dag.rs  file_node.rs  fs.rs  io_utils.rs  main.rs  output.rs  stable_topo.rs
tests/input/cyclic_dep/: a.txt  b.txt  c.txt
tests/input/sql/: a_file_to_ignore.txt
tests/input/sql/my_other_schema/: schema.sql
tests/input/sql/my_other_schema/functions/: a.sql  b.sql  c.sql
tests/input/sql/my_schema/: schema.sql
tests/input/sql/my_schema/functions/: a.sql
tests/output/sql/: output.sql
